docs(comments): 全仓库中英双语 Javadoc 汉化补全与术语修正
- 30 个子代理按目录分桶处理 4797 个 Java 文件，补全类级/方法级双语 Javadoc
- 修复批量汉化脚本遗留的结构性损坏：悬空 @param/@return 描述行约 4000+ 处、
  孤立垃圾行约 440 处、中英标点混排与缩进错乱
- 术语按 docs/aion-game-terms-en-zh.md + 客户端 STR_* 字符串权威修正：
  Elyos→天族、Asmodians→魔族、Abyss→欧比斯、Aether→奥德、Kinah→基纳、
  Stigma→烙印之石、Legion→军团、全职业译名等
- 地名按 client_strings_level.xml 533 条权威 zone name 修正：
  Gelkmaros→格尔克马洛斯、Inggison→英吉斯温、Heiron→因特尔蒂卡、
  Theobomos→泰奥勃莫斯、Brusthonin→布鲁斯特豪宁、Beluslan→贝鲁斯兰、
  Enshar→厄夏勒、Norsvold→诺斯珀德、Cygnea→希哥尼亚、Iluma→阿斯泰拉等
- i18n: messages_zh_CN.properties 修正 3 处术语误译（null→空→空军团、
  烙印→烙印之石），7 个 .java 行内注释术语修正（职业名、公会 vs 军团区分）
- 修复过程中处置 2 起代理误删代码事件（AttackUtil 的 /** 标记、
  QuestDefinitionCompiler 的类声明），已恢复并编译验证
- 新增 docs/comment-hanlization-codebugs.md：汇总代理发现的约 50 处
  代码疑似 bug（均未改动，仅报告）
- 严格不改代码逻辑，mvn compile 零错误

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>